# test

./: .gitignore  CMakeLists.txt  README.md  filebrowser.db  launch.txt  plot_trends.py  results.csv  start.txt
include/: converter.h
plots/: trend_equations.md
src/: converter.cpp  main.cpp
